# audio_playback

./: CMakeCache.txt  README.md  aud.c  aud_test.c  audio  audio_p  audio_play.c  audio_playback  audio_process.c  dev.txt  play  play.c  play2.c  playback_mic.dart  pubspec.yaml  tt  tt.c
.dart_tool/: package_config.json
audio_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  audio_lib_exec  audio_play  cmake_install.cmake  libaudio_lib.1.0.0.dylib  libaudio_lib.1.dylib  libaudio_lib.dylib  play.c  play.def  play.h
audio_manager/: play3.c
audio_playback_mic/: CMakeCache.txt  CMakeLists.txt  Makefile  aud.def  aud.h  cmake_install.cmake
